<resources>
    <string name="app_name">Digital House Foods</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="or">or</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="repeat_password">Repeat password</string>
    <string name="insert_name">Insira um nome</string>
    <string name="insert_email">Insert email</string>
    <string name="password_cannot_be_null">Password cannot be empty</string>
    <string name="must_contain_at_least_6_characters">Must contain at least 6 characters</string>
    <string name="must_be_the_same_as_password">Must be the same as password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="close_at">Fecha às %1$s</string>
    <string name="meal_image">Meal image</string>
    <string name="restaurant_image">Restaurant Image</string>
    <string name="principal_meals">Pratos principais</string>
    <string name="splash_screen_image">Splash screen image</string>
    <string name="back">Back</string>
</resources>