<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:theme="?attr/actionBarTheme"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/color_white"/>
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtEmailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_48dp"
        android:hint="@string/email"
        android:layout_marginHorizontal="@dimen/dimen_20dp"
        android:layout_marginVertical="@dimen/dimen_20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarLogin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtPasswordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:hint="@string/password"
        android:layout_marginHorizontal="@dimen/dimen_20dp"
        android:layout_marginVertical="@dimen/dimen_20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtEmailLogin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:backgroundTint="@color/color_red"
        android:text="@string/log_in"
        android:layout_marginHorizontal="@dimen/dimen_20dp"
        android:layout_marginVertical="@dimen/dimen_20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtPasswordLogin"/>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:layout_marginHorizontal="@dimen/dimen_20dp"
        android:layout_marginVertical="@dimen/dimen_20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin">

        <TextView
            android:id="@+id/txtOr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:layout_marginEnd="@dimen/dimen_10dp"
            android:gravity="center"
            android:text="@string/or" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1dp"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/txtOr"
            android:background="@color/color_gray" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/txtOr"
            android:background="@color/color_gray" />
    </RelativeLayout>

    <Button
        android:id="@+id/btnRegisterLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_72dp"
        android:backgroundTint="@color/color_gray"
        android:text="@string/register"
        android:layout_marginHorizontal="@dimen/dimen_20dp"
        android:layout_marginVertical="@dimen/dimen_20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/relativeLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>